--- a/src/main/resources/templates/common_fragments.html
+++ b/src/main/resources/templates/common_fragments.html
@@ -112,10 +112,10 @@
 
 
 <!-- footer -->
-<div id="footer" th:fragment="footer" class="jumbotron text-center bg-light banner" style="margin-bottom: 0">
+<div id="footer" th:fragment="footer" class="jumbotron text-center bg-white banner" style="margin-bottom: 0">
 
 
-    <p>&copy;2021. Daily Closet. All Rights Reserved.</p>
+    <small>&copy;2021. Daily Closet. All Rights Reserved.</small>
 </div>
 
 </html>
