--- a/src/main/resources/templates/view/signup.html
+++ b/src/main/resources/templates/view/signup.html
@@ -86,7 +86,7 @@
                         </div>
                         <div class="col-2">
                             <label class="form-label">address</label>
-                            <button class="w-100 btn btn-dark" type="button" onclick="search(signupForm)">search</button>
+                            <button class="w-100 btn btn-light" type="button" onclick="search(signupForm)">search</button>
                         </div>
                         <hr class="col-12 my-4">
                         <button class="w-100 btn btn-dark btn" type="submit">Continue to checkout</button>
