--- a/src/main/resources/static/css/common/common.css
+++ b/src/main/resources/static/css/common/common.css
@@ -53,7 +53,7 @@ body {
     font-weight: 700;
     margin-top: 25px;
     margin-right: 5px;
-    margin-left: 10px;
+    margin-left: 20px;
 }
 
 table {
@@ -135,6 +135,10 @@ p {
 #usernav{
     text-align: right;
     float: right;
+}
+
+#nav_left{
+    margin-left: 20%;
 }
 
 #navbar_right{
