--- a/src/main/resources/templates/common_fragments.html
+++ b/src/main/resources/templates/common_fragments.html
@@ -26,7 +26,7 @@
 
         <!-- nav에 item 넣기 -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav mr-auto" id="navbar_left">
 
                 <!--                <li class="nav-item">-->
                 <!--                    <a class="nav-link" th:href="@{/logout}" sec:authorize="isAuthenticated()"><h5>Logout</h5></a>-->
