--- a/src/main/resources/static/css/common/common.css
+++ b/src/main/resources/static/css/common/common.css
@@ -53,7 +53,7 @@ body {
     font-weight: 700;
     margin-top: 25px;
     margin-right: 5px;
-    margin-left: 10px;
+    margin-left: 80px;
 }
 
 table {
@@ -144,7 +144,11 @@ p {
     text-align: right;
     font-weight: 700;
     font-size: 1.0em;
-    margin-left: 30%;
+    margin-left: 5px;
+}
+
+#navbar_left{
+    margin-left: 10%;
 }
 
 
