--- a/src/main/resources/static/css/common/common.css
+++ b/src/main/resources/static/css/common/common.css
@@ -53,7 +53,7 @@ body {
     font-weight: 700;
     margin-top: 25px;
     margin-right: 5px;
-    margin-left: 80px;
+    margin-left: 20px;
 }
 
 table {
@@ -109,6 +109,37 @@ p {
     max-width: 1500px;
 }
 
+li{
+    list-style:none;
+}
+
+.imgbox_middle {
+    margin: 5px;
+    padding: 7px;
+    display: inline;
+    width:200px;
+    height:200px;
+}
+
+.codybox {
+    border: 1px solid grey;
+    display: inline;
+    width: 100px;
+    height: 100px;
+    margin: 20px;
+}
+
+.likeimgbox{
+    writing-mode:vertical-lr;
+    width: 100px;
+    height: 100px;
+}
+
+.vertical-data{
+    writing-mode:vertical-lr
+}
+
+
 #back{
     margin-left: 0;
     background-color: white;
@@ -137,6 +168,10 @@ p {
     float: right;
 }
 
+#nav_left{
+    margin-left: 20%;
+}
+
 #navbar_right{
     margin-top: 7px;
     display: inline;
@@ -144,11 +179,12 @@ p {
     text-align: right;
     font-weight: 700;
     font-size: 1.0em;
-    margin-left: 5px;
+    margin-left: 30%;
 }
 
-#navbar_left{
-    margin-left: 10%;
+#carousel{
+    width: 50%;
+    height: 250px;
 }
 
 
