--- a/src/main/resources/templates/view/index.html
+++ b/src/main/resources/templates/view/index.html
@@ -9,7 +9,18 @@
 </th:block>
 
 <div layout:fragment="content" class="container" style="background-color: white;">
-    <h2> This is Main Page.</h2>
+    <br/><br/>
+    <div class="py-`5` ml-2">
+        <h2>Today's Pick!</h2>
+        <p>Hottest Cody</p>
+    </div>
+    <!-- 재우 -->
+    <th:block th:insert="item_fragements :: item_list(${clothsList})"/>
+    <hr class="col-10 my-4">
+    <div class="py-5 ml-2">
+        <h2>Category name</h2>
+        <p>옷정보..</p>
+    </div>
 
 </div>
 
