--- a/src/main/resources/templates/view/browser-location.html
+++ b/src/main/resources/templates/view/browser-location.html
@@ -14,77 +14,56 @@
 
 <script>
     const KEY ="AIzaSyBRIdueEX0Qeqz8Wyztxks_rSof_IdTNWM";
-    const LAT = "37.577847899999995";
-    const LNG = "126.89027870000001";
-    // const LAT = navigator.geolocation.getCurrentPosition(function (position){
-    //     var latitude= position.coords.latitude
-    //
-    // });
-    //
-    // const LNG = navigator.geolocation.getCurrentPosition(function (position){
-    //     var longitude= position.coords.longitude
-    //
-    // });
-    // let latitude;
-    // let longitude;
+    // const LAT = "35.824941";
+    // const LNG = "128.464810";
 
-    // navigator.geolocation.getCurrentPosition(function(pos) {
-    //     var latitude = pos.coords.latitude;
-    //     var longitude = pos.coords.longitude;
-    //     alert("현재 위치는 : " + latitude + ", "+ longitude);
-    // });
-
-
-    let url = "https://maps.googleapis.com/maps/api/geocode/json?latlng="+LAT+","+LNG+"&key="+KEY;
+    //경북 = 35.824941 128.464810
+    // let url = "https://maps.googleapis.com/maps/api/geocode/json?latlng="+LAT+","+LNG+"&key="+KEY;
+    let url;
     let city;
 
-    // if(navigator.geolocation){
-    //     navigator.geolocation.getCurrentPosition(function (position){
-    //        const latitude = position.coords.latitude;
-    //        const longitude = position.coords.longitude;
-    //        var pos={
-    //            lat: position.coords.latitude,
-    //            lng: position.coords.longitude
-    //        }
-    //     })
-    // }
+    navigator.geolocation.getCurrentPosition(function(pos) {
+        var latitude = pos.coords.latitude;
+        var longitude = pos.coords.longitude;
+        url = "https://maps.googleapis.com/maps/api/geocode/json?latlng="+latitude+","+longitude+"&key="+KEY;
+        console.log("lat: "+latitude+", lng:"+longitude);
+        fetch(url)
+            .then(response => response.json())
+            .then(data => {
+                //console.log(data);
+                let parts = data.results[0].formatted_address
+                city = parts.split(" ")[1];
 
+                console.log(city+" fetch");
+                // parts.forEach(part => {
+                //     if(part.types.includes("City")) {
+                //         document.body.insertAdjacentHTML(
+                //             "beforeend",
+                //             '<p>COUNTRY: ${part.long_name}</p>'
+                //         )
+                //     }
+                // })
 
-
-    fetch(url)
-    .then(response => response.json())
-    .then(data => {
-        //console.log(data);
-        let parts = data.results[10].address_components[1];
-        city = parts.long_name;
-
-        console.log(city+" fetch");
-        // parts.forEach(part => {
-        //     if(part.types.includes("City")) {
-        //         document.body.insertAdjacentHTML(
-        //             "beforeend",
-        //             '<p>COUNTRY: ${part.long_name}</p>'
-        //         )
-        //     }
-        // })
-
-        // $(document).ready(function(){
-            $("#locationBtn").click(function(){
-               // e.preventDefault();
-                console.log(city+" ajax");
-                let geolocation = {city};
-                $.ajax({
-                    url : "/find-my-location",
-                    type : "GET",
-                    data : geolocation,
-                    success : function(data) {
-                       // alert(data);
-                    },
-                })//ajax
+                // $(document).ready(function(){
             });
-        });
+        // })
+    });
+    $("#locationBtn").click(function(){
+        // e.preventDefault();
+        console.log(city+" ajax");
+        let geolocation = {city};
+        $.ajax({
+            url : "/find-my-location",
+            type : "GET",
+            data : geolocation,
+            success : function(data) {
+                // alert(data);
+            },
+        })//ajax
+    });
 
-    // })
+
+
 
 </script>
 </div>
