--- a/src/main/resources/templates/common_fragments.html
+++ b/src/main/resources/templates/common_fragments.html
@@ -86,6 +86,9 @@
                     <a id="navp_right" class="nav-link" th:href="@{/signup}" sec:authorize="!isAuthenticated()">Sign up</a>
                 </li>
                 <li class="nav-item">
+                    <a id="navp_right" class="nav-link" th:href="@{/weather}" sec:authorize="!isAuthenticated()">Weather</a>
+                </li>
+                <li class="nav-item">
                     <a id="navp_right" class="nav-link" th:href="@{/cart/list}" sec:authorize="isAuthenticated()">Cart</a>
                 </li>
 
