--- a/src/main/resources/templates/view/detail.html
+++ b/src/main/resources/templates/view/detail.html
@@ -37,9 +37,7 @@
                                                                                th:src="${item.urls.get(8)}"></div>
                 <div class="imgbox_mini" th:if="${item.urls.size()} >= 10"><img class="mini" id="mini9"
                                                                                 th:src="${item.urls.get(9)}"></div>
-
             </div>
-
         </div>
 
         <div id="product_info">
@@ -103,7 +101,8 @@
     </div>
 
     <!--delete review Modal -->
-    <div class="modal fade" id="delReviewModal" tabindex="-1" role="dialog" aria-labelledby="modalTitle" aria-hidden="true">
+    <div class="modal fade" id="delReviewModal" tabindex="-1" role="dialog" aria-labelledby="modalTitle"
+         aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <form class="needs-validation" th:id="deleteReview" th:action="@{/review/delete}" th:method="post">
@@ -134,16 +133,17 @@
                         <h4 id="modal-title" class="modal-title"></h4>
                     </div>
                     <div class="modal-body">
-
                         <table class="table">
                             <tr>
                                 <input type="hidden" th:id="title" th:attr="name='itemId'" th:value="${item.getId()}">
+                                <input type="hidden" th:id="review-id" th:attr="name='reviewId'">
                                 <td>Title</td>
-                                <td><input class="form-control" th:id="title" th:attr="name='title'" type="text"></td>
+                                <td><input class="form-control" th:id="review-title" th:attr="name='title'" type="text">
+                                </td>
                             </tr>
                             <tr>
                                 <td>Content</td>
-                                <td><textarea class="form-control" th:id="contents" th:attr="name='contents'"
+                                <td><textarea class="form-control" th:id="review-content" th:attr="name='contents'"
                                               rows="10"></textarea></td>
                             </tr>
                         </table>
@@ -198,6 +198,7 @@
             }
 
         });
+
         $(document).ready(function () {
 
             // 새 글 쓰기 버튼 클릭
@@ -215,29 +216,23 @@
                 $("#delReviewModal").modal();
             });
 
-            // 수정하기 버튼 클릭
-            $("#modify-review").click(function () {
-                $("#modal-title").text("Modify Your Review");
-                $("#writeReview").modal();
-            });
-
         });
 
-        function deleteReview(reviewId) {
-            $.ajax({
-                type: 'post', // 요청 방식
-                url: '/review/delete', // 요청 보낼 주소
-                // data:"id":reviewId,
-                data: {
-                    "reviewId": reviewId
-                }, // 보낼 파라미터
-                dataType: 'json', // 응답메시지의 content-type 을 json으로 (json타입으로 받겠다!)
-                success: function (result) {
-                    // Modal 띄우기
-                    $('.modal-body').html(result.message);
-                    $('#modal').modal('show');
-                }
-            });
+        function modifyReview(reviewForm) {
+            var title = reviewForm.reviewTitle.value;
+            var content = reviewForm.reviewContent.value;
+            var id = reviewForm.reviewId.value;
+
+            $("#modal-title").text("Modify Your Review");
+            document.getElementById("review-title").value = title;
+            document.getElementById("review-content").value = content;
+            document.getElementById("review-id").value = id;
+
+            console.log(document.getElementById("review-title").value);
+            console.log(document.getElementById("review-content").value);
+            console.log(document.getElementById("review-id").value);
+
+            $("#writeReview").modal();
         };
 
     </script>
