--- a/src/main/resources/templates/view/cody.html
+++ b/src/main/resources/templates/view/cody.html
@@ -3,33 +3,38 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="layout" th:with="title='Detail Page'">
 
-<div layout:fragment="content" class="container" style="background-color: #FFFFFF;">
-    <div class="row justify-content-center py-5">
-        <form class="needs-validation" th:id="codyForm" th:action="@{/cody}" th:object="${codyForm}" method="post"
-              novalidate>
-<!--            <div class="container">-->
+<div layout:fragment="content" className="container" style="background-color: #FFFFFF;">
+    <div className="row justify-content-center py-5">
+        <<<<<<< HEAD
+        <form className="needs-validation" th:id="codyForm" th:action="@{/cody}" th:object="${codyForm}" method="post"
+        =======
 
-<!--                <div class="row" style="position: relative; height: 500px; width: 500px; border:1px solid black;">-->
-<!--                    <div class="col" style="position: absolute">-->
-<!--                        <img th:id="outerCody" class="imgbox_middle" >-->
-<!--                    </div>-->
-<!--                    <div class="col" style="position: absolute">-->
-<!--                        <img th:id="topCody" class="imgbox_middle">-->
-<!--                    </div>-->
-<!--                    <div class="w-100" style="position: absolute"></div>-->
-<!--                    <div class="col" style="position: absolute">-->
-<!--                        <img th:id="topCody" class="imgbox_middle">-->
-<!--                    </div>-->
-<!--                    <div class="col" style="position: absolute">-->
-<!--                        <img th:id="accCody" class="imgbox_middle">-->
-<!--                    </div>-->
-<!--                    <div class="col" style="position: absolute">-->
-<!--                        <img th:id="shoesCody" class="imgbox_middle">-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
+        <form className="needs-validation" id="codyForm" th:action="@{/cody}" th:object="${codyForm}" method="post"
+        >>>>>>> origin/ssu
+            novalidate>
+            <!--            <div class="container">-->
 
-            <table class="table table-bordered">
+            <!--                <div class="row" style="position: relative; height: 500px; width: 500px; border:1px solid black;">-->
+            <!--                    <div class="col" style="position: absolute">-->
+            <!--                        <img th:id="outerCody" class="imgbox_middle" >-->
+            <!--                    </div>-->
+            <!--                    <div class="col" style="position: absolute">-->
+            <!--                        <img th:id="topCody" class="imgbox_middle">-->
+            <!--                    </div>-->
+            <!--                    <div class="w-100" style="position: absolute"></div>-->
+            <!--                    <div class="col" style="position: absolute">-->
+            <!--                        <img th:id="topCody" class="imgbox_middle">-->
+            <!--                    </div>-->
+            <!--                    <div class="col" style="position: absolute">-->
+            <!--                        <img th:id="accCody" class="imgbox_middle">-->
+            <!--                    </div>-->
+            <!--                    <div class="col" style="position: absolute">-->
+            <!--                        <img th:id="shoesCody" class="imgbox_middle">-->
+            <!--                    </div>-->
+            <!--                </div>-->
+            <!--            </div>-->
+
+            <table className="table table-bordered">
                 <thead>
                 <tr>
                     <th width="20%">상의</th>
@@ -44,7 +49,7 @@
                 <tr>
                     <!--                아우터-->
                     <td>
-                        <input type="image" id="outerCody" class="imgbox_middle" th:if="${outerList.size()!= 0}"
+                        <input type="image" id="outerCody" className="imgbox_middle" th:if="${outerList.size()!= 0}"
                                th:src="${outerList.get(0).getUrls().get(0)}">
                         <input type="hidden" th:if="${outerList.size()!= 0}" th:value="${outerList.get(0).getId()}"
                                th:attr="name='outerId'"></input>
@@ -52,21 +57,52 @@
                     </td>
                     <!--                상의-->
                     <td>
-                        <img th:id="topCody" class="imgbox_middle">
+                        <<<<<<< HEAD
+                        <img th:id="topCody" className="imgbox_middle">
                         <input th:id="topId" type="hidden" th:attr="name='topId'"></input>
+                        =======
+                        <input type="image" id="topCody" className="imgbox_middle" th:if="${topList.size()!= 0}"
+                               th:src="${topList.get(0).getUrls().get(0)}" th:required="required">
+                        <div className="invalid-feedback">
+                            <h5>Please select a top.</h5>
+                        </div>
+                        <input type="hidden" th:if="${topList.size()!= 0}" th:value="${topList.get(0).getId()}"
+                               th:attr="name='topId'"></input>
+
+
+                        >>>>>>> origin/ssu
                     </td>
 
                     <!--                                하의-->
                     <td>
-                        <img th:id="bottomCody" class="imgbox_middle">
+                        <<<<<<< HEAD
+                        <img th:id="bottomCody" className="imgbox_middle">
                         <input th:id="bottomId" type="hidden" th:attr="name='bottomId'"></input>
+                        =======
+                        <input type="image" id="bottomCody" className="imgbox_middle" th:if="${bottomList.size()!= 0}"
+                               th:src="${bottomList.get(0).getUrls().get(0)}" th:required="required">
+                        <div className="invalid-feedback">
+                            <h5>Please select a bottom.</h5>
+                        </div>
+                        <input type="hidden" th:if="${bottomList.size()!= 0}" th:value="${bottomList.get(0).getId()}"
+                               th:attr="name='bottomId'"></a>
+
+                        >>>>>>> origin/ssu
                     </td>
 
 
                     <!--                가방-->
                     <td>
-                        <img th:id="accCody" class="imgbox_middle">
+                        <<<<<<< HEAD
+                        <img th:id="accCody" className="imgbox_middle">
                         <input th:id="accId" type="hidden" th:attr="name='accId'"></input>
+                        =======
+                        <input type="image" id="accCody" className="imgbox_middle" th:if="${accList.size()!= 0}"
+                               th:src="${accList.get(0).getUrls().get(0)}">
+                        <input type="hidden" th:if="${accList.size()!= 0}" th:value="${accList.get(0).getId()}"
+                               th:attr="name='accId'"></input>
+
+                        >>>>>>> origin/ssu
                     </td>
 
                     <!--                신발-->
@@ -75,20 +111,23 @@
                         <!--                                                     src="C:\Users\pc\Desktop\daily-closet-main (2)\daily-closet-main (1)\daily-closet-main\src\main\resources\assets\images\102618.png">-->
                         <!--                                            <img id="shoesCodyex" src="..\..\assets\images\102621.png">-->
 
-                        <input type="image" id="shoesCody" class="imgbox_middle" th:if="${shoesList.size()!= 0}"
+                        <input type="image" id="shoesCody" className="imgbox_middle" th:if="${shoesList.size()!= 0}"
                                th:src="${shoesList.get(0).getUrls().get(0)}" th:required="required">
-                        <div class="invalid-feedback">
+                        <div className="invalid-feedback">
                             <h5>Please select the shoes</h5>
                         </div>
                         <input type="hidden" th:if="${shoesList.size()!= 0}" th:value="${shoesList.get(0).getId()}"
                                th:attr="name='shoesId'"></input>
 
+                        <<<<<<< HEAD
                         <input th:id="shoesId" type="hidden" th:attr="name='shoesId'"></input>
+                        =======
+                        >>>>>>> origin/ssu
                     </td>
                 </tr>
 
                 <tr>
-                    <input type="button" id="submit_btn" class="w-50 btn btn-dark btn-lg" value="submit">
+                    <input type="button" id="submit_btn" className="w-50 btn btn-dark btn-lg" value="submit">
                 </tr>
 
                 </tbody>
@@ -97,7 +136,7 @@
 
         </form>
 
-        <table class="table table-bordered">
+        <table className="table table-bordered">
             <thead>
             <tr>
                 <th width="20%">상의</th>
@@ -114,14 +153,14 @@
                 <td>
                     <li th:if="${outerList.size()== 0}">Add Outer List</li>
                     <li th:each="item:${outerList}">
-                        <img class="likeimgbox" th:src="${item.urls.get(0)}">
+                        <img className="likeimgbox" th:src="${item.urls.get(0)}">
                     </li>
                 </td>
                 <!--                상의-->
                 <td>
                     <li th:if="${topList.size()== 0}">Add Top List</li>
                     <li th:each="item:${topList}">
-                        <img class="likeimgbox" th:src="${item.urls.get(0)}">
+                        <img className="likeimgbox" th:src="${item.urls.get(0)}">
                     </li>
                 </td>
 
@@ -129,7 +168,7 @@
                 <td>
                     <li th:if="${bottomList.size()== 0}">Add Bottom List</li>
                     <li th:each="item:${bottomList}">
-                        <img class="likeimgbox" th:src="${item.urls.get(0)}">
+                        <img className="likeimgbox" th:src="${item.urls.get(0)}">
                     </li>
                 </td>
 
@@ -138,15 +177,15 @@
                 <td>
                     <li th:if="${accList.size()== 0}">Add Acc List</li>
                     <li th:each="item:${accList}">
-                        <img class="likeimgbox" th:src="${item.urls.get(0)}">
+                        <img className="likeimgbox" th:src="${item.urls.get(0)}">
                     </li>
                 </td>
 
                 <!--                신발-->
                 <td>
                     <li th:if="${shoesList.size()== 0}">Add Shoes List</li>
-                    <li class="shoes" th:each="item:${shoesList}">
-                        <img class="likeimgbox" th:src="${item.urls.get(0)}">
+                    <li className="shoes" th:each="item:${shoesList}">
+                        <img className="likeimgbox" th:src="${item.urls.get(0)}">
                     </li>
                 </td>
 
